# ChurnGuard_AI

./: .gitignore  README.md  app.py  pyproject.toml
churnguard_ai/: __init__.py  database.py  modeling.py  ui_helpers.py
data/: sample_customer_churn.csv  sample_inference_customers.csv
