[project]
name = "churnguard-ai"
version = "0.1.0"
description = "Customer churn prediction system with Streamlit UI, scikit-learn models, and SQL-backed prediction history."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.44.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["churnguard_ai"]
